--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="sub.css">
 </head>
 <body>
     <h1>hello</h1>
